--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,6 @@ spring.jpa.hibernate.ddl-auto = update
 spring.mail.host = smtp.gmail.com
 spring.mail.port = 587
 spring.mail.username = debugpaulo@gmail.com
-spring.mail.password = debugpaulo123
+spring.mail.password = kgcliypftscmlmbt
 spring.mail.properties.mail.smtp.auth = true
 spring.mail.properties.mail.smtp.starttls.enable = true
