--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,6 @@ spring.mail.username = debugpaulo@gmail.com
 spring.mail.password = kgcliypftscmlmbt
 spring.mail.properties.mail.smtp.auth = true
 spring.mail.properties.mail.smtp.starttls.enable = true
+
+spring.rabbitmq.addresses=amqps://nvpaksow:Y2ZVjEb_idX6WG78hUnG7AMcQeKpkXlN@beaver.rmq.cloudamqp.com/nvpaksow
+spring.rabbitmq.queue=ms.email
